--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,62 @@
-# Stage 3 generated data
-stage-starters/stage_03/data/*.log
-stage-starters/stage_03/data/*.json
-# Python bytecode
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-# Stage 5 / Python build + runtime artifacts
-.cache/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+build/
 dist/
 *.egg-info/
-START_HERE.old
-*.old
-# pytest
-.pytest_cache/
-**/.pytest_cache/
+.eggs/
 
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# Environment variables / secrets
+.env
+.env.*
+*.env
+
+# Unit test / coverage
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+.cache/
+
+# Type checking
+.mypy_cache/
+.pyre/
+.pytype/
+
+# IDEs / editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Logs
+*.log
+logs/
+
+# Local tooling
+ruff_cache/
+
+# Generated reports / data
+*.json
+stage-starters/**/data/
