Stage 05: testing, packaging, CI, and documentation overhaul

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ ruff_cache/
 # Generated reports / data
 *.json
 stage-starters/**/data/
+
+*.egg-info/
+dist/
+build/
+__pycache__/
+.pytest_cache/
+
