--- a/stage-starters/stage_05/.github/workflows/ci.yml
+++ b/stage-starters/stage_05/.github/workflows/ci.yml
@@ -5,8 +5,9 @@ on:
   pull_request:
 
 jobs:
-  test-and-build:
+  test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,22 +17,13 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install (dev)
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[dev]"
-          python -m pip install build
+      - name: Upgrade pip
+        run: python -m pip install -U pip
+
+      - name: Install Stage 05 (editable) + dev deps
+        working-directory: stage-starters/stage_05
+        run: pip install -e ".[dev]"
 
       - name: Run tests
-        run: |
-          pytest -q
-
-      - name: Build artifacts
-        run: |
-          python -m build
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/*
+        working-directory: stage-starters/stage_05
+        run: pytest
